unpackaged/main/default/objects/Product_Environment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead record that initiated Product Environment creation (applicable only for environment created through trials)</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Product Environments</relationshipLabel>
    <relationshipName>Product_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>