unpackaged/main/default/objects/Product_Environment__c/fields/Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Live_Date__c</fullName>
    <description>Used by Soluno to identify the firm&#39;s live date.</description>
    <label>Live Date</label>
    <type>Date</type>
</CustomField>