unpackaged/main/default/objects/Product_Environment__c/fields/LPP_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>LPP_Provisioned__c</fullName>
    <formula>If(ISBLANK(LPP_Provisioned_Date__c),False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPP Provisioned</label>
    <type>Checkbox</type>
</CustomField>