unpackaged/main/default/objects/Product_Environment__c/fields/LPP_Provisioned_Date__c.field-meta.xml
<CustomField>
    <fullName>LPP_Provisioned_Date__c</fullName>
    <inlineHelpText>Date LPP was provisioned for this firm</inlineHelpText>
    <label>LPP Provisioned Date</label>
    <type>Date</type>
</CustomField>