unpackaged/main/default/objects/Product_Environment__c/fields/Merchant_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Application_ID__c</fullName>
    <label>Merchant Application ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>