unpackaged/main/default/objects/Product_Environment__c/fields/Merchant_Application_Oauth_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Application_Oauth_App_ID__c</fullName>
    <label>Merchant Application OAuth App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>