unpackaged/main/default/objects/Product_Environment__c/fields/Merchant_Application_OAuth_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Application_OAuth_App_Name__c</fullName>
    <label>Merchant Application OAuth App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>