unpackaged/main/default/objects/Product_Environment__c/fields/Merchant_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Category_Code__c</fullName>
    <label>Merchant Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8111 Legal Services and Attorneys</fullName>
            </value>
            <value>
                <fullName>8931 Accounting, Auditing, and Bookkeeping Services</fullName>
            </value>
            <value>
                <fullName>8911 Architectural – Engineering and Surveying Services</fullName>
            </value>
            <value>
                <fullName>8699 Membership Organizations ( Not Elsewhere Classified)</fullName>
            </value>
            <value>
                <fullName>8099 Medical Services and Health Practitioners (Not Elsewhere Classified)</fullName>
            </value>
            <value>
                <fullName>8398 Charitable and Social Service Organizations</fullName>
            </value>
            <value>
                <fullName>9399 Government Services ( Not Elsewhere Classified)</fullName>
            </value>
            <value>
                <fullName>7299 Miscellaneous Personal Services ( not elsewhere classifies)</fullName>
            </value>
            <value>
                <fullName>7392 Management, Consulting, and Public Relations Services</fullName>
            </value>
            <value>
                <fullName>8011 Doctors and Physicians (Not Elsewhere Classified)</fullName>
            </value>
            <value>
                <fullName>8999 Professional Services ( Not Elsewhere Defined)</fullName>
            </value>
            <value>
                <fullName>7277 Counseling Service – Debt, Marriage, Personal</fullName>
            </value>
            <value>
                <fullName>8651 Political Organizations</fullName>
            </value>
            <value>
                <fullName>5193 Florists Supplies, Nursery Stock and Flowers</fullName>
            </value>
            <value>
                <fullName>---------------------------------------</fullName>
            </value>
            <value>
                <fullName>1520 General Contractors-Residential and Commercial</fullName>
            </value>
            <value>
                <fullName>1711 Air Conditioning Contractors – Sales and Installation, Heating Contractors – Sales, Service, Installation</fullName>
            </value>
            <value>
                <fullName>1731 Electrical Contractors</fullName>
            </value>
            <value>
                <fullName>1740 Insulation – Contractors, Masonry, Stonework Contractors, Plastering Contractors, Stonework and Masonry Contractors, Tile Settings Contractors</fullName>
            </value>
            <value>
                <fullName>1750 Carpentry Contractors</fullName>
            </value>
            <value>
                <fullName>1761 Roofing – Contractors, Sheet Metal Work – Contractors, Siding – Contractors</fullName>
            </value>
            <value>
                <fullName>1771 Contractors – Concrete Work</fullName>
            </value>
            <value>
                <fullName>1799 Contractors – Special Trade, Not Elsewhere Classified</fullName>
            </value>
            <value>
                <fullName>2741 Miscellaneous Publishing and Printing</fullName>
            </value>
            <value>
                <fullName>2791 Typesetting, Plate Making, &amp; Related Services</fullName>
            </value>
            <value>
                <fullName>2842 Specialty Cleaning, Polishing, and Sanitation Preparations</fullName>
            </value>
            <value>
                <fullName>3000-3299 AIRLINES</fullName>
            </value>
            <value>
                <fullName>3300-3500 Car Rental</fullName>
            </value>
            <value>
                <fullName>3500-4000 Hotels/Motels/Inns/Resorts</fullName>
            </value>
            <value>
                <fullName>4011 Railroads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>