unpackaged/main/default/objects/Product_Environment__c/fields/Merchant_UUID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Merchant UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>