unpackaged/main/default/objects/Product_Environment__c/fields/Non_Active_Named_Users__c.field-meta.xml
<CustomField>
    <fullName>Non_Active_Named_Users__c</fullName>
    <label>Non Active Named Users</label>
    <summaryFilterItems>
        <field>Product_User__c.Placeholder_User__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Product_User__c.Activated__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_User__c.Product_Environment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>