unpackaged/main/default/objects/Product_Environment__c/fields/Notes_CP__c.field-meta.xml
<CustomField>
    <fullName>Notes_CP__c</fullName>
    <inlineHelpText>Number of Notes reported by Casepeer</inlineHelpText>
    <label>Notes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>