unpackaged/main/default/objects/Product_Environment__c/fields/Notes_Last_30_CP__c.field-meta.xml
<CustomField>
    <fullName>Notes_Last_30_CP__c</fullName>
    <inlineHelpText>Casepeer Nots over the last 30 days</inlineHelpText>
    <label>Notes Last 30</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>