unpackaged/main/default/objects/Product_Environment__c/fields/Onboarding_Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Test_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if onboarding test account</description>
    <label>Onboarding Test Account</label>
    <type>Checkbox</type>
</CustomField>