unpackaged/main/default/objects/Product_Environment__c/fields/Operating_MID__c.field-meta.xml
<CustomField>
    <fullName>Operating_MID__c</fullName>
    <externalId>true</externalId>
    <label>Operating MID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>