unpackaged/main/default/objects/Product_Environment__c/fields/Overdue_Date__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Date__c</fullName>
    <label>Overdue Date</label>
    <type>Date</type>
</CustomField>