unpackaged/main/default/objects/Product_Environment__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <description>Firms Owners</description>
    <label>Owners First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>