unpackaged/main/default/objects/Product_Environment__c/fields/Owners_Email__c.field-meta.xml
<CustomField>
    <fullName>Owners_Email__c</fullName>
    <label>Owners Email</label>
    <type>Email</type>
</CustomField>