unpackaged/main/default/objects/Product_Environment__c/fields/Owners_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Owners_Last_Name__c</fullName>
    <label>Owners Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>