unpackaged/main/default/objects/Product_Environment__c/fields/Paralegals__c.field-meta.xml
<CustomField>
    <fullName>Paralegals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active paralegals sent from the app</description>
    <label>Paralegals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>