unpackaged/main/default/objects/Product_Environment__c/fields/Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true from MyCase app when firm enters payment information and is recognized as converted</description>
    <label>Payment Information</label>
    <type>Checkbox</type>
</CustomField>