unpackaged/main/default/objects/Product_Environment__c/fields/Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removed the reference to Mycase in the label and name on 12/26/22</description>
    <label>Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>