unpackaged/main/default/objects/Product_Environment__c/fields/Payments_Reminders_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Payments_Reminders_Opt_Out_Date__c</fullName>
    <label>Payments Reminders Opt Out Date</label>
    <type>Date</type>
</CustomField>