unpackaged/main/default/objects/Product_Environment__c/fields/PCI_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>PCI_Contact_Email__c</fullName>
    <label>PCI Contact Email</label>
    <type>Email</type>
</CustomField>