unpackaged/main/default/objects/Product_Environment__c/fields/PCI_Suppress_Notice__c.field-meta.xml
<CustomField>
    <fullName>PCI_Suppress_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCI Suppress Notice</label>
    <type>Checkbox</type>
</CustomField>