unpackaged/main/default/objects/Product_Environment__c/fields/Placeholder_Users__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Users__c</fullName>
    <label>Placeholder Users</label>
    <summaryFilterItems>
        <field>Product_User__c.Placeholder_User__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_User__c.Product_Environment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>