unpackaged/main/default/objects/Product_Environment__c/fields/Prod_Env_Count_CPACharge__c.field-meta.xml
<CustomField>
    <fullName>Prod_Env_Count_CPACharge__c</fullName>
    <label>Prod Env Count (CPACharge)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>