unpackaged/main/default/objects/Product_Environment__c/fields/Referral_Auto_Royalty__c.field-meta.xml
<CustomField>
    <fullName>Referral_Auto_Royalty__c</fullName>
    <label>Referral Auto Royalty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>