unpackaged/main/default/objects/Product_Environment__c/fields/Referral_Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Channel__c</fullName>
    <label>Referral Source Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>