unpackaged/main/default/objects/Product_Environment__c/fields/Run_Account_Matching__c.field-meta.xml
<CustomField>
    <fullName>Run_Account_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Runs process to match PE Record to Account or non converted lead</inlineHelpText>
    <label>Run Account Matching</label>
    <type>Checkbox</type>
</CustomField>