unpackaged/main/default/objects/Product_Environment__c/fields/Run_Account_Status_Review__c.field-meta.xml
<CustomField>
    <fullName>Run_Account_Status_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Account Status Review</label>
    <type>Checkbox</type>
</CustomField>