unpackaged/main/default/objects/Product_Environment__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>Auto generated Serial Number for Soluno Customer</inlineHelpText>
    <label>Serial Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>