unpackaged/main/default/objects/Product_Environment__c/fields/Size_of_Documents__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Documents__c</fullName>
    <label>Size of Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>