unpackaged/main/default/objects/Product_Environment__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active staff sent from the app</description>
    <label>Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>