unpackaged/main/default/objects/Product_Environment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Removed the reference to MyCase in the label and name on 12/26/22</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>