unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Billing_Email__c</fullName>
    <inlineHelpText>Billing email address logged in Stripe</inlineHelpText>
    <label>Stripe Billing Email</label>
    <type>Email</type>
</CustomField>