unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Customer_ID_CP__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID_CP__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Stripe Customer ID for Casepeer Account</inlineHelpText>
    <label>Stripe Customer ID (CP)</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>