unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Customer_ID_DW__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID_DW__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Stripe Customer ID from Docketwise System</inlineHelpText>
    <label>Stripe Customer ID (DW)</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>