unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Link__c</fullName>
    <formula>If(NOT(ISBLANK(Stripe_Customer_ID_DW__c))
   , CASE(Brand__c, 
     &quot;Docketwise&quot;, (HYPERLINK(&quot;https://dashboard.stripe.com/customers/&quot; &amp; Stripe_Customer_ID_DW__c , &quot;Stripe Customer Link&quot;)),
     &quot;Casepeer&quot;, &quot;Coming Soon&quot;,
      &quot;N/A&quot;)
, &quot;N/A&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Customer Link</label>
    <type>Text</type>
</CustomField>