unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Discount__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Discount__c</fullName>
    <label>Stripe Discount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>