unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Price_ID_DW__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID_DW__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Strip Price ID. This would likn to the strip product</inlineHelpText>
    <label>Stripe Price ID (DW)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>