unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Name__c</fullName>
    <label>Stripe Product Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>