unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Product_Qty__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Qty__c</fullName>
    <label>Stripe Product Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>