unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Subscription_ID_CP__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_ID_CP__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Stripe Subscription ID for Casepeer Customer</inlineHelpText>
    <label>Stripe Subscription ID (CP)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>