unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Subscription_ID_DW__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_ID_DW__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Subscription ID for Docketwise Strip</inlineHelpText>
    <label>Stripe Subscription ID (DW)</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>