unpackaged/main/default/objects/Product_Environment__c/fields/Stripe_Subscription_Item_ID_DW__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Item_ID_DW__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Strip Subscription Item</inlineHelpText>
    <label>Stripe Subscription Item ID (DW)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>