unpackaged/main/default/objects/Product_Environment__c/fields/Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Subdomain__c</fullName>
    <description>Subdomain for the firm&#39;s product environment</description>
    <inlineHelpText>Subdomain for the firm&#39;s product environment</inlineHelpText>
    <label>Subdomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>