unpackaged/main/default/objects/Product_Environment__c/fields/Subscription_Tier__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier__c</fullName>
    <label>Subscription Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>