unpackaged/main/default/objects/Product_Environment__c/fields/Suspended_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspended_Date__c</fullName>
    <label>Suspended Date</label>
    <type>Date</type>
</CustomField>