unpackaged/main/default/objects/Product_Environment__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>