unpackaged/main/default/objects/Product_Environment__c/fields/Tasks__c.field-meta.xml
<CustomField>
    <fullName>Tasks__c</fullName>
    <label>Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>