unpackaged/main/default/objects/Product_Environment__c/fields/Templates_CP__c.field-meta.xml
<CustomField>
    <fullName>Templates_CP__c</fullName>
    <inlineHelpText>Number of Templates from Casepeer</inlineHelpText>
    <label>Templates</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>