unpackaged/main/default/objects/Product_Environment__c/fields/Texting_CP__c.field-meta.xml
<CustomField>
    <fullName>Texting_CP__c</fullName>
    <inlineHelpText>Indicates if Texting is activated in Casepeer or not</inlineHelpText>
    <label>Texting</label>
    <length>10</length>
    <type>Text</type>
</CustomField>