unpackaged/main/default/objects/Product_Environment__c/fields/Time_Entries__c.field-meta.xml
<CustomField>
    <fullName>Time_Entries__c</fullName>
    <label>Time Entries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>