unpackaged/main/default/objects/Product_Environment__c/fields/Total_Activated_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Activated_Users__c</fullName>
    <label>Total Activated Users</label>
    <summaryFilterItems>
        <field>Product_User__c.Activated__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_User__c.Product_Environment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>