unpackaged/main/default/objects/Product_Environment__c/fields/Total_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Users</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>