unpackaged/main/default/objects/Product_Environment__c/fields/Total_Users_Calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Users_Calc__c</fullName>
    <formula>Attorney_Count__c +  Staff_Count__c +  Paralegal_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Users Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>