unpackaged/main/default/objects/Product_Environment__c/fields/Trial_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration__c</fullName>
    <description>Trial expiration date if initiated from a trial</description>
    <inlineHelpText>Trial expiration date if initiated from a trial</inlineHelpText>
    <label>Trial Expiration</label>
    <type>Date</type>
</CustomField>