unpackaged/main/default/objects/Product_Environment__c/fields/Trial_Expiration_Day_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration_Day_in_Month__c</fullName>
    <formula>DAY(DATEVALUE(CreatedDate))</formula>
    <label>Trial Expiration Day in Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>