unpackaged/main/default/objects/Product_Environment__c/fields/Trust_MID__c.field-meta.xml
<CustomField>
    <fullName>Trust_MID__c</fullName>
    <label>Trust MID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>