unpackaged/main/default/objects/Product_Environment__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>