unpackaged/main/default/objects/Product_Environment__c/fields/Vantiv_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Last_30_Days__c</fullName>
    <label>Vantiv (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>