unpackaged/main/default/objects/Product_Environment__c/fields/Vantiv_Payments__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments__c</fullName>
    <label>Vantiv Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>