unpackaged/main/default/objects/Product_Environment__c/fields/Vantiv_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments_Amount__c</fullName>
    <label>Vantiv Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>