unpackaged/main/default/objects/Product_Environment__c/fields/Vantiv_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vantiv Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>