unpackaged/main/default/objects/Product_Environment__c/fields/Vantiv_Revenue_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Revenue_Last_30_Days__c</fullName>
    <label>Vantiv Revenue (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>