unpackaged/main/default/objects/Product_Environment__c/fields/VT_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>VT_Created_Date__c</fullName>
    <label>VT Created Date</label>
    <type>DateTime</type>
</CustomField>