unpackaged/main/default/objects/Product_Environment__c/fields/VT_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>VT_Last_Updated_Date__c</fullName>
    <label>VT Last Updated Date</label>
    <type>DateTime</type>
</CustomField>