unpackaged/main/default/objects/Product_Environment__c/fields/VTID__c.field-meta.xml
<CustomField>
    <fullName>VTID__c</fullName>
    <description>Id of AffiniPay customer from VT</description>
    <externalId>true</externalId>
    <label>VTID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>