unpackaged/main/default/objects/Product_Environment__c/recordTypes/Affinipay.recordType-meta.xml
<RecordType>
    <fullName>Affinipay</fullName>
    <active>true</active>
    <description>Covers all Payment brands</description>
    <label>Affinipay</label>
</RecordType>