unpackaged/main/default/objects/Product_Environment__c/recordTypes/Casepeer.recordType-meta.xml
<RecordType>
    <fullName>Casepeer</fullName>
    <active>true</active>
    <label>Casepeer</label>
</RecordType>