unpackaged/main/default/objects/Product_Environment__c/recordTypes/Docketwise.recordType-meta.xml
<RecordType>
    <fullName>Docketwise</fullName>
    <active>true</active>
    <label>Docketwise</label>
</RecordType>