unpackaged/main/default/objects/Product_Environment__c/recordTypes/LawPay_Pro.recordType-meta.xml
<RecordType>
    <fullName>LawPay_Pro</fullName>
    <active>true</active>
    <label>LawPay Pro</label>
</RecordType>