unpackaged/main/default/objects/Product_Environment__c/recordTypes/MyCase.recordType-meta.xml
<RecordType>
    <fullName>MyCase</fullName>
    <active>true</active>
    <label>MyCase</label>
</RecordType>