unpackaged/main/default/objects/Product_Environment__c/recordTypes/Soluno.recordType-meta.xml
<RecordType>
    <fullName>Soluno</fullName>
    <active>true</active>
    <label>Soluno</label>
</RecordType>