unpackaged/main/default/objects/Product_Environment__c/listViews/AffiniaPay_All.listView-meta.xml
<ListView>
    <fullName>AffiniaPay_All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>VTID__c</columns>
    <columns>Brand__c</columns>
    <columns>Account__c</columns>
    <columns>Firm_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Environment__c.Affinipay</value>
    </filters>
    <label>AffiniaPay All</label>
</ListView>