unpackaged/main/default/objects/Product_Environment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Account__c</columns>
    <columns>Firm_Name__c</columns>
    <columns>Firm_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>