unpackaged/main/default/objects/Product_Environment__c/listViews/MyCase_All.listView-meta.xml
<ListView>
    <fullName>MyCase_All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Firm_Name__c</columns>
    <columns>Firm_ID__c</columns>
    <columns>Firm_Status__c</columns>
    <columns>Active_Accounting_Free_Users__c</columns>
    <columns>Active_Accounting_Paid_Users__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Environment__c.MyCase</value>
    </filters>
    <label>MyCase All</label>
</ListView>